Put Footer at bottom of CSS, Changed Request Pic, Changed Request Header, Fixed Footer on Mobile

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -54,6 +54,14 @@
   iframe {
     width: 100vw;
   }
+
+  .footer {
+    flex-direction: column;
+    height: 15vh;
+    & .social > * {
+      margin-left: 0;
+    }
+  }
 }
 
 @media (max-height: 400px) {
